# skills

./: .gitignore  README.md
.claude-plugin/: marketplace.json
create_deck/: SKILL.md
create_deck/scripts/: revenue_by_country.py
critique/: SKILL.md
finance-data/: .academic-studio-package.json  SKILL.md
finance-data/references/: edgar.md  fmp.md  ken_french.md  stooq.md  treasury.md  yahoo.md
plugins/critique/.claude-plugin/: plugin.json
plugins/finance-data/.claude-plugin/: plugin.json
plugins/litdb/: .gitignore  INSTALL.md  README.md  config.example.toml  pyproject.toml
plugins/litdb/.claude-plugin/: plugin.json
plugins/litdb/examples/: sample-better-csl.json  sample-zotero-csl.json
plugins/litdb/scripts/: setup.py
plugins/litdb/skills/litdb/: SKILL.md  add-folder.md  add-note.md  onboarding.md  search.md  setup.md  setup.py
plugins/litdb/skills/litdb-setup/: SKILL.md
plugins/litdb/src/litdb/: __init__.py  citegraph.py  cli.py  config.py  db.py  discovery.py  indexer.py  pdf.py  retrieval.py  scanner.py  server.py  vectorstore.py
plugins/litdb/src/litdb/embeddings/: __init__.py  base.py  fastembed.py  hashing.py  ollama.py  openai.py  registry.py  voyage.py
plugins/litdb/src/litdb/ingest/: __init__.py  betterbibtex.py  zotero.py
plugins/slides/.claude-plugin/: plugin.json
plugins/slides/skills/slides/: SKILL.md
plugins/voiceover/.claude-plugin/: plugin.json
qmd-deck/: SKILL.md
qmd-deck/references/: export.md
slide-deck/: SKILL.md
slide-deck/assets/: revealjs-style.scss
slide-deck/references/: components.md
(+47 files in other folders)
