[project]
name = "litdb"
version = "0.2.0"
description = "Personal literature + notes knowledge base with hybrid retrieval, distributed as a Claude Code plugin."
authors = [{ name = "Kerry Back" }]
requires-python = ">=3.10"
# Phase 1 core is pure standard library (sqlite3 + FTS5). Optional extras are
# only pulled in when a feature is actually used.
dependencies = []

[project.optional-dependencies]
# Embedding providers use stdlib urllib, so nothing is required for Ollama/
# Voyage/OpenAI. numpy is an optional accelerator for vector KNN.
embeddings = ["numpy>=1.24"]
# Optional in-process local embedder (ONNX, no PyTorch).
fastembed = ["fastembed>=0.3"]
# PDF full-text extraction (pure Python, no native/system dependency).
pdf = ["pypdf>=4.0"]
# Optional MCP wrapper (the CLI is the primary, always-available surface).
mcp = ["mcp>=1.2.0"]
dev = ["pytest>=8.0"]

[project.scripts]
litdb = "litdb.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litdb"]
